Point the LangChain4j skill at the langchain4j-jitllm module
The integration now lives in langchain4j-jitllm (JitLLM* classes,
jdk21/jdk22plus profiles; langchain4j/langchain4j#6508). Update the
module paths, the backend and truncation rules, the fixture results for
jitllm 1.0.0 / TornadoVM 7.0.1, the demo adaptation notes, and both
scripts (jdk22plus artifact, unit tests in the validation run).